cmake_minimum_required(VERSION 3.10)
project(dataContainers)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
add_executable(vectorPointer3 vectorPointerWithShuffle.cpp)
add_executable(noShuffle3 vectorPointerNoShuffle.cpp)
add_executable(singleArray3 singleArray.cpp)
add_executable(vectorArray3 vectorArray.cpp)
add_executable(pointerVector3 pointerVector.cpp)
add_executable(vectorVector3 vectorVector.cpp)
add_executable(pointerPointer3 pointerPointer.cpp)
add_executable(singleVector3 singleVector.cpp)
add_executable(helloWorld3 helloWorld.cpp)